--- a/TestGrid/TestGrid/Resource1.resx
+++ b/TestGrid/TestGrid/Resource1.resx
@@ -130,8 +130,59 @@
   <data name="Label1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Label1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Label10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label13.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label14.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label17" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label17.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label18" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label18.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label19" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label19.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Label2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Label2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Label9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Label9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
